@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-22T02:15:30Z",
+  "timestamp" : "2022-08-22T08:29:25Z",
   "count_outdated" : 419,
   "uniques_outdated" : 262,
-  "count" : 453,
-  "uniques" : 287,
+  "count" : 454,
+  "uniques" : 288,
   "clones" : [
     {
       "timestamp": "2022-08-08T00:00:00Z",
@@ -56,6 +56,13 @@
     },
     {
       "timestamp": "2022-08-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-22T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
