@@ -1,5 +1,5 @@
 {
-  "count": 34,
+  "count": 35,
   "uniques": 19,
   "clones": [
     {
@@ -39,6 +39,11 @@
     },
     {
       "timestamp": "2022-08-21T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-22T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
